--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -34,5 +34,5 @@
 			</div>
 			<div class="col-md-12" ng-if="($index+1)%3 == 0" ng-repeat-end></div>
 	</div>
-        <a id="ctrls-swch" ng-click="toggle()"> </a> 
+        <a id="ctrls-swch" ng-click="toggle()">#</a> 
 </div>
