--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -48,7 +48,7 @@
           </p>
           <p ng-if="item.type == 'file'">
             <label>{{sFieldLabel(item.name)}}</label>
-            <file-field name="{{item.id}}" ng-model="item.value" ng-required="property.required">Add File</file-field>
+            <file-field name="{{item.id}}" ng-disabled="isFormPropertyDisabled(item)" ng-model="item.value" ng-required="property.required">Add File</file-field>
           </p>
           <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea', 'file'].indexOf(item.type) == -1">
             <label>{{sFieldLabel(item.name)}}</label> <!-- {{item.type}} -->
