Issue #242 - Added admin buttons for service profile (itteration #1)

--- a/central-js/client/src/html/service/instruction.html
+++ b/central-js/client/src/html/service/instruction.html
@@ -14,4 +14,7 @@
 			</div>
 		</div>
 	</div>
+    <a class="ctrls-admin ctrls-srvc-edit" href="" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-pencil"></span> Редагувати   </a>
+    <a class="ctrls-admin ctrls-srvc-save" href="" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-ok"></span> Зберегти   </a>
+    <a class="ctrls-admin ctrls-srvc-cancel" href="" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-minus"></span> Скасувати   </a>
 </div>
