--- a/central-js/client/src/html/service/questions.html
+++ b/central-js/client/src/html/service/questions.html
@@ -9,4 +9,7 @@
 			</div>
 		</div>
 	</div>
+    <a class="ctrls-admin ctrls-srvc-edit" href="" ng-hide="hiddenCtrls||hiddenEdit"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>  
+    <a class="ctrls-admin ctrls-srvc-save" href="" ng-hide="hiddenCtrls||hiddenSave"><span class="glyphicon glyphicon-ok"></span> Зберегти</a>  
+    <a class="ctrls-admin ctrls-srvc-cancel" href="" ng-hide="hiddenCtrls||hiddenCancel"><span class="glyphicon glyphicon-minus"></span> Скасувати</a>  
 </div>
