Issue #242 - Added admin buttons for service profile (itteration #4)

--- a/central-js/client/src/html/service/country/absent.html
+++ b/central-js/client/src/html/service/country/absent.html
@@ -1,11 +1,9 @@
 <div class="list-group">
 	<div class="list-group-item">
 		<div class="row">
-			<div class="col-md-10 text-center">
+			<div class="col-md-12 text-center">
 				<strong>На жаль, поки що неможливе надання цієї послуги в електронному вигляді.</strong>
-			</div>
-                        <div class="col-md-2 text-center">
-				<a class="ctrls-admin ctrls-srvc-activate" href="" ng-hide="hiddenCtrls||hiddenActivate"><span class="glyphicon glyphicon-cd"></span> Активувати послугу</a>
+                                <a class="ctrls-admin ctrls-srvc-activate" href="" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-cd"></span> Активувати послугу</a>
 			</div>
 		</div>
 		<div class="row">
