--- a/central-js/client/src/html/service/region/absent.html
+++ b/central-js/client/src/html/service/region/absent.html
@@ -19,6 +19,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<strong>На жаль, поки що у Вашому регіоні неможливе надання цієї послуги в електронному вигляді.</strong>
+                                <a class="ctrls-admin ctrls-srvc-activate" href="" ng-hide="hiddenCtrls" title="Активувати послугу в цьому регіоні"><span class="glyphicon glyphicon-cd"></span> Активувати послугу</a>
 			</div>
 		</div>
 		<div class="row">
