--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -83,6 +83,8 @@
                         </ul>
                     </div>
                 </div>
+                <a class="ctrls-admin ctrls-srvc-change" href="" ng-hide="hiddenCtrls" title="Змінити параметри послуги в цьому місті"><span class="glyphicon glyphicon-cog"></span> Змінити параметри</a>
+                <a class="ctrls-admin ctrls-srvc-deactivate" href="" ng-hide="hiddenCtrls" title="Деактивувати послугу в цьому місті"><span class="glyphicon glyphicon-cd"></span> Деактивувати послугу</a>
             </div>
             <div class="col-md-1"
                  ng-if="data.city">
