--- a/central-js/client/src/html/catalog/subcategory.html
+++ b/central-js/client/src/html/catalog/subcategory.html
@@ -6,8 +6,9 @@
         <div class="col-md-4" ng-repeat-start="service in subcategory.aService | orderBy: '-nSub'">
             <ul class="list-unstyled">
                 <li>
-                    <a ng-if="service.nSub>0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on"></i>{{service.sName}}</a>
-                    <a ng-if="service.nSub==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off"></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==2" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on"></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==1" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test"></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off"></i>{{service.sName}}</a>
                 </li>
             </ul>
         </div>
