Issue #242 - Added admin buttons for service profile (itteration #7)

--- a/central-js/client/src/html/service/city/content.html
+++ b/central-js/client/src/html/service/city/content.html
@@ -83,10 +83,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="ctrls-block">
-                    <a class="ctrls-admin ctrls-srvc-change" href="" ng-hide="hiddenCtrls" title="Змінити параметри послуги в цьому регіоні"><span class="glyphicon glyphicon-cog"></span> Змінити параметри послуги</a><br>
-                    <a class="ctrls-admin ctrls-srvc-deactivate" href="" ng-hide="hiddenCtrls" title="Деактивувати послугу в цьому регіоні"><span class="glyphicon glyphicon-cd"></span> Деактивувати послугу</a>    
-                </div>
+                    <a class="ctrls-admin ctrls-srvc-edit" href="" ng-hide="hiddenCtrls" title="Редагувати послугу в цьому регіоні"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>
+                    <a class="ctrls-admin ctrls-srvc-remove" href="" ng-hide="hiddenCtrls" title="Видалити послугу в цьому регіоні"><span class="glyphicon glyphicon-remove"></span> Видалити</a>    
             </div>
             <div class="col-md-1"
                  ng-if="data.city">
