--- a/central-js/client/src/html/service/city/absent.html
+++ b/central-js/client/src/html/service/city/absent.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-12 text-center">
 		<strong>На жаль, поки що у Вашому регіоні неможливе надання цієї послуги в електронному вигляді.</strong>
-                <a class="ctrls-admin ctrls-srvc-activate" href="" ng-hide="hiddenCtrls" title="Активувати послугу в цьому місті"><span class="glyphicon glyphicon-cd"></span> Активувати послугу</a>
+                <a class="ctrls-admin ctrls-srvc-add" href="" ng-hide="hiddenCtrls" title="Додати послугу в цьому місті"><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
 	</div>
 </div>
 <div class="row">
