--- a/central-js/client/src/html/service/region/link/index.html
+++ b/central-js/client/src/html/service/region/link/index.html
@@ -16,7 +16,10 @@
 		</div>
 	</div>
 	<div class="list-group-item disabled" ng-if="data.region">
-		<span>Крок 2. Перейдіть за посиланням:</span>
-		<a ng-href="{{serviceData.sURL}}">{{service.sName}}</a>
+		<span>Крок 2.</span>
+		<p class="service-description" ng-bind-html="serviceData.sNote" ng-if="serviceData.sNote"></p>
+		<div class="service-button-go">
+			<a ng-href="{{serviceData.sURL}}" class="btn btn-primary" target="_blank">Перейти</a>
+		</div>
 	</div>
 </div>
