--- a/central-js/client/src/html/service/city/absent.html
+++ b/central-js/client/src/html/service/city/absent.html
@@ -8,21 +8,30 @@
 	<!--<div class="col-md-12 text-center">Ознайомитись, як можна скористатися цією послугою, можна в <a ui-sref="service.instruction({ id: service.nID })">Інструкції</a></div>-->
 	<div class="col-md-12">
 		<span class="text-center">Ви можете допомогти пришвидчити процес переведння послуги в електронний вигляд:</span>
-		<ol>
-			<li>
+		<!--ol>
+			<li-->
 				Поділіться посиланням на цю сторінку в соціальних мережах із закликом підтримати ініціативу по переводу послуги в електронний вигляд.
-				<div class="pluso"
-					 data-background="transparent"
-					 data-options="big,round,line,horizontal,nocounter,theme=04"
-					 data-title="Закликаю владу перевести цю послугу в електронну форму!"
-					 data-description="{{data.city.sName}} – {{service.sName}}"
-					 data-services="facebook,vkontakte,twitter">
-				</div>
-			</li>
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <div class="pluso"
+                                                     data-background="transparent"
+                                                     data-options="big,round,line,horizontal,nocounter,theme=04"
+                                                     data-title="Закликаю владу перевести цю послугу в електронну форму! {{data.city.sName}} – {{service.sName}}"
+                                                     data-description="{{data.city.sName}} – {{service.sName}}"
+                                                     data-services="facebook,vkontakte,twitter">
+                                            </div>
+                                        </td>
+                                        <td>
+                                            Залиште свій email. Ми Вас поінформуємо, як тільки ця послуга буде доступна в електронному вигляді.
+                                        </td>
+                                    </tr>
+                                </table>
+			<!--/li>
 			<li>
 				Залиште свій email. Ми Вас поінформуємо, як тільки ця послуга буде доступна в електронному вигляді.
 			</li>
-		</ol>
+		</ol>-->
 	</div>
 </div>
 <div class="row">
