--- a/central-js/client/src/html/service/discussion.html
+++ b/central-js/client/src/html/service/discussion.html
@@ -4,7 +4,7 @@
 			<div class="col-md-5" style="margin: 0 10px 0 10px">
 				<div class="hypercomments-container">
 					<div id="hypercomments_widget"></div>
-					<a href="http://hypercomments.com" class="hc-link" title="comments widget">comments powered by HyperComments</a>
+					<a href="http://hypercomments.com" class="hc-link" title="comments widget"></a><!--comments powered by HyperComments-->
 				</div>
 			</div>
 		</div>
