--- a/central-js/client/src/html/service/country/link/index.html
+++ b/central-js/client/src/html/service/country/link/index.html
@@ -1,9 +1,11 @@
 <div class="list-group">
 	<div class="list-group-item disabled">
 		<span>Крок 1.</span>
-		<p class="service-description" ng-bind-html="serviceData.sNote" ng-if="serviceData.sNote"></p>
-		<div class="service-button-go">
-			<a ng-href="{{serviceData.sURL}}" class="btn btn-primary" target="_blank">Перейти</a>
+		<div class="service-description">
+			<p class="service-description-text" ng-bind-html="serviceData.sNote" ng-if="serviceData.sNote"></p>
+			<div class="service-button-go">
+				<a ng-href="{{serviceData.sURL}}" class="btn btn-primary" target="_blank">Перейти</a>
+			</div>
 		</div>
 	</div>
 </div>
