--- a/dashboard-js/client/index.html
+++ b/dashboard-js/client/index.html
@@ -25,6 +25,7 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/tasks/tasks.css">
       <link rel="stylesheet" href="components/modal/modal.css">
+      <link rel="stylesheet" href="components/print/print.modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -86,6 +87,7 @@
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/print/print.modal.directive.js"></script>
           <script src="components/process/process.service.js"></script>
           <script src="components/task/task.service.js"></script>
           <!-- endinjector -->
