Стартовая -заменить дефис на тире: - на – -ставить правильные падежи слова “послуга”. Пока в ручном режиме, затем сделать склонения, чтобы не следить. -альт желтого кружочка: Ця послуга буде доступна онлайн дуже скоро. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна
Профиль услуги
-вообще убрать вкладку “Обговорення”
-Если нет инфо во вкладках “Як працює”, “Закон” и “ЧаВо”, то ВООБЩЕ вкладки не показывать. Иначе эти пустоты будут только раздражать.

Футер
-убираем “iGov.org.ua @”, а “Зроблено..” равняем по правому краю
-слева ставим ссылки:
Державним органам: додати свою послугу на iGov
Громадянам та бізнесу: в каталозі немає послуги?
Новини Порталу iGov на Facebook

--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -8,13 +8,13 @@
            </div>
             <div class="index-services-count">
                 <span class="index-services-count-item">
-                    <span class="icon-e-service-on"></span>{{catalogCounts[2]}} послуг доступно онлайн
+                    <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуга доступна онлайн
                 </span>
                 <span class="index-services-count-item">
-                    <span class="icon-e-service-test"></span>{{catalogCounts[1]}} - дуже скоро
+                    <span class="icon-e-service-test"></span>{{catalogCounts[1]}} &mdash; дуже скоро
                 </span>
                 <span class="index-services-count-item">
-                    <span class="icon-e-service-off"></span>{{catalogCounts[0]}} - в роботі
+                    <span class="icon-e-service-off"></span>{{catalogCounts[0]}} &mdash; в роботі
                 </span>
             </div>
         </div>
@@ -34,7 +34,7 @@
                                                 <!--p ng-if="service.nSub>0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on" title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-remove"></span></a></p>
                                                 <p ng-if="service.nSub==0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off" title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-remove"></span></a></p-->
                                                 <p ng-if="service.nStatus==2"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on" title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-remove"></span></a></p>
-                                                <p ng-if="service.nStatus==1"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test" title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-remove"></span></a></p>
+                                                <p ng-if="service.nStatus==1"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test" title="Ця послуга буде доступна онлайн дуже скоро. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-remove"></span></a></p>
                                                 <p ng-if="service.nStatus==0"><a ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off" title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a> <a class="ctrls-admin ctrls-srvc" href="" title="Редагувати послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-pencil"></span></a> <a class="ctrls-admin ctrls-srvc" href="" title="Видалити послугу" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-remove"></span></a></p>
 					</li>
 				</ul>                        
