--- a/central-js/client/src/html/catalog/subcategory.html
+++ b/central-js/client/src/html/catalog/subcategory.html
@@ -6,9 +6,9 @@
         <div class="col-md-4" ng-repeat-start="service in subcategory.aService | orderBy: '-nSub'">
             <ul class="list-unstyled">
                 <li>
-                    <a ng-if="service.nStatus==2" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on"></i>{{service.sName}}</a>
-                    <a ng-if="service.nStatus==1" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test"></i>{{service.sName}}</a>
-                    <a ng-if="service.nStatus==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off"></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==2" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-on" title="Ця послуга доступна в електронній формі для одного, кількох або всіх регіонів"></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==1" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-test" title="Ця послуга буде доступна онлайн дуже скоро. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a>
+                    <a ng-if="service.nStatus==0" ui-sref="service.general({'id': service.nID })" ng-href="/service/{{service.nID}}/general"><i class="icon-e-service-off" title="Ця послуга поки не доступна онлайн. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна."></i>{{service.sName}}</a>
                 </li>
             </ul>
         </div>
