--- a/central-js/client/src/html/service/index.html
+++ b/central-js/client/src/html/service/index.html
@@ -6,13 +6,13 @@
             <ul class="nav nav-tabs">
                 <li ui-sref-active="active"
                     role="presentation"><a ui-sref="service.general({id: service.nID})">Послуга</a></li>
-                <li ui-sref-active="active"
+                <li ui-sref-active="active" ng-hide="service.sInfo.trim()==''"
                     role="presentation"><a ui-sref="service.instruction({id: service.nID})">Як працює</a></li>
-                <li ui-sref-active="active"
+                <li ui-sref-active="active" ng-hide="service.sLaw.trim()==''"
                     role="presentation"><a ui-sref="service.legislation({id: service.nID})">Законодавство</a></li>
-                <li ui-sref-active="active"
+                <li ui-sref-active="active" ng-hide="service.sFAQ.trim()==''"
                     role="presentation"><a ui-sref="service.questions({id: service.nID})">Поширенні питання</a></li>
-                <li ui-sref-active="active"
+                <li ui-sref-active="active" style="display: none;"
                     role="presentation"><a ui-sref="service.discussion({id: service.nID})">Обговорення</a></li>
             </ul>
         </div>
