--- a/central-js/client/src/html/service/region/absent.html
+++ b/central-js/client/src/html/service/region/absent.html
@@ -44,6 +44,16 @@
                                                         </td>
                                                         <td style="vertical-align:top;">
                                                             Залиште свій email. Ми Вас поінформуємо, як тільки ця послуга буде доступна в електронному вигляді.
+                                                            <div class="col-md-12 text-center">
+                                                            <form name="absentMessageForm">
+                                                                <input type="email" data-ng-model="absentMessage.email" name="email" placeholder="Ваш email" required ng-keyup="emailKeydown()"/>
+                                                                <input type="button" data-ng-click="sendAbsentMessage(absentMessageForm, absentMessage)" value="Зберегти" />
+                                                                <div role="alert" ng-if="absentMessage.showErrors">
+                                                                  <span class="error" ng-if="absentMessageForm.email.$error.required">Введіть Вашу email-адресу</span>
+                                                                  <span class="error" ng-if="absentMessageForm.email.$error.email">Введіть коректну email адресу</span>
+                                                                </div>
+                                                            </form>
+                                                            </div>                                                            
                                                         </td>
                                                     </tr>
                                                 </table>
