Issue #242 - admin-buttons hidden

--- a/central-js/client/src/html/service/legislation.html
+++ b/central-js/client/src/html/service/legislation.html
@@ -10,8 +10,8 @@
 		</div>
 	</div>
         <div class="ctrls-line">
-            <a class="ctrls-admin ctrls-srvc-edit" href="" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>  
-            <a class="ctrls-admin ctrls-srvc-save" href="" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-ok"></span> Зберегти</a>  
-            <a class="ctrls-admin ctrls-srvc-cancel" href="" ng-hide="hiddenCtrls"><span class="glyphicon glyphicon-minus"></span> Скасувати</a>
+            <a class="ctrls-admin ctrls-srvc-edit" href="" ng-hide="true"><span class="glyphicon glyphicon-pencil"></span> Редагувати</a>  
+            <a class="ctrls-admin ctrls-srvc-save" href="" ng-hide="true"><span class="glyphicon glyphicon-ok"></span> Зберегти</a>  
+            <a class="ctrls-admin ctrls-srvc-cancel" href="" ng-hide="true"><span class="glyphicon glyphicon-minus"></span> Скасувати</a>
         </div>
 </div>
