--- a/central-js/client/src/html/service/region/content.html
+++ b/central-js/client/src/html/service/region/content.html
@@ -18,7 +18,7 @@
 						</div>
 						<ul class="dropdown-menu" role="menu">
 							<li ng-repeat="region in regionList.dropdown.list track by $index">
-								<a ng-click="onSelectRegionList(region, null, null)" ng-class="{'color-green': (region.color == 'green'), 'color-red': (region.color == 'red')}">{{region.sName}}</a>
+								<a ng-click="onSelectRegionList(region, null, null)" ng-class="{'color-green': (region.color == 'green')}">{{region.sName}}</a>
 							</li>
 						</ul>
 					</div>
