Блок с кнопками соцсетей и подпиской на email +сейчас левая колонка шире, чем права. Сделать их одинаковыми +кнопки равнять по центру левой колонки, а не по левому краю Футер +Куда-то пропало Зроблено… (напомню, это должно по правому краю) +тексты трех новых ссылок сделать в 2 ряда, чтобы они не были на всю ширину (ссылки по левому краю) Количество услуг под поиском +Полезла строчка

--- a/central-js/client/src/html/service/country/absent.html
+++ b/central-js/client/src/html/service/country/absent.html
@@ -15,18 +15,20 @@
                                         <li-->
                                                 <table style="vertical-align:top;">
                                                     <tr>
-                                                        <td style="vertical-align:top;">
+                                                        <td style="vertical-align:top;width:50%;">
                                                             Поділіться посиланням на цю сторінку в соціальних мережах із закликом підтримати ініціативу по переводу послуги в електронний вигляд.
                                                             <br>
-                                                            <div class="pluso"
-                                                                     data-background="transparent"
-                                                                     data-options="big,round,line,horizontal,nocounter,theme=04"
-                                                                     data-title="Закликаю владу перевести цю послугу в електронну форму! {{data.city.sName}} – {{service.sName}}"
-                                                                     data-description="{{data.city.sName}} – {{service.sName}}"
-                                                                     data-services="facebook,vkontakte,twitter">
-                                                            </div>
+                                                            <center>
+                                                                <div class="pluso"
+                                                                         data-background="transparent"
+                                                                         data-options="big,round,line,horizontal,nocounter,theme=04"
+                                                                         data-title="Закликаю владу перевести цю послугу в електронну форму! {{data.city.sName}} – {{service.sName}}"
+                                                                         data-description="{{data.city.sName}} – {{service.sName}}"
+                                                                         data-services="facebook,vkontakte,twitter">
+                                                                </div>
+                                                            </center>
                                                         </td>
-                                                        <td style="vertical-align:top;">
+                                                        <td style="vertical-align:top;width:50%;">
                                                             Залиште свій email. Ми Вас поінформуємо, як тільки ця послуга буде доступна в електронному вигляді.
                                                             <div class="col-md-12 text-center">
                                                             <form name="absentMessageForm">
