--- a/dashboard-js/client/app/tasks/tasks.html
+++ b/dashboard-js/client/app/tasks/tasks.html
@@ -1,71 +1,108 @@
-<div ng-include="'components/navbar/navbar.html'" class="navbar-fixed-top"></div>
+<div ng-include="'components/navbar/navbar.html'"
+     class="navbar-fixed-top"></div>
 <div class="container"
      ng-init="init()">
-  <div class="container__in">
-    <div class="row">
-      <div class="col-xs-5 sidebar">
-        <div class="tasks">
-          <div class="list-group">
-            <a class="list-group-item task" href=""
-               ng-repeat="task in tasks"
-               tooltip="{{task.description}}"
-               ng-click="selectTask(task)"
-               ng-class="{'active': isTaskSelected(task)}">
-               #{{task.id}} ({{ sDateShort(task.createTime) }}) {{ getProcessName(task.processDefinitionId) }} | {{ task.name }}
-            </a>
-          </div>
+    <div class="container__in">
+        <div class="row">
+            <div class="col-xs-5 sidebar">
+                <div class="tasks">
+                    <div class="list-group">
+                        <a class="list-group-item task"
+                           href=""
+                           ng-repeat="task in tasks"
+                           tooltip="{{task.description}}"
+                           ng-click="selectTask(task)"
+                           ng-class="{'active': isTaskSelected(task)}">
+                            #{{task.id}} ({{ sDateShort(task.createTime) }}) {{ getProcessName(task.processDefinitionId)
+                            }} | {{ task.name }}
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-7 col-xs-offset-5 main">
+                <h3 ng-show="selectedTask && taskForm == null && !error">Завантаження ...</h3>
+
+                <show-error data="error"
+                            ng-show="error"></show-error>
+
+                <div ng-repeat="item in taskForm">
+                    <div ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
+
+                        <label>{{sFieldLabel(item.name)}}</label>
+
+                        <div class="input-group">
+                            <input class="form-control"
+                                   ng-disabled="isFormPropertyDisabled(item)"
+                                   ng-required="item.required"
+                                   ng-model="item.value"/>
+                            <span class="input-group-addon"
+                                  ng-if="isFormPropertyDisabled(item)"
+                                  clip-copy="item.value">
+                                <i class="glyphicon glyphicon-copy"></i>
+                            </span>
+                        </div>
+                    </div>
+
+                    <p ng-if="item.type == 'textArea'">
+                        <label>{{sFieldLabel(item.name)}}</label>
+
+                        <textarea class="form-control"
+                                  ng-disabled="isFormPropertyDisabled(item)"
+                                  ng-required="item.required"
+                                  ng-model="item.value"></textarea>
+                    </p>
+
+                    <p ng-if="item.type == 'user'">
+                        <label>{{sFieldLabel(item.name)}}</label>
+                        <input class="form-control"
+                               ng-disabled="true"
+                               ng-required="item.required"
+                               ng-model="item.value"/>
+                    </p>
+
+                    <p ng-if="item.type == 'enum'">
+                        <label>{{sFieldLabel(item.name)}}</label>
+                        <select class="form-control"
+                                ng-disabled="isFormPropertyDisabled(item)"
+                                ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues"
+                                ng-required="item.required"
+                                ng-model="item.value"></select>
+                    </p>
+
+                    <p ng-if="item.type == 'file' && !isFormPropertyDisabled(item)">
+                        <label>{{sFieldLabel(item.name)}}</label>
+                        <file-field name="{{item.id}}"
+                                    ng-disabled="isFormPropertyDisabled(item)"
+                                    ng-model="item.value"
+                                    ng-required="property.required">Add File
+                        </file-field>
+                    </p>
+                    <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea', 'file'].indexOf(item.type) == -1">
+                        <label>{{sFieldLabel(item.name)}}</label>
+                        <input class="form-control"
+                               ng-disabled="true"
+                               ng-required="item.required"
+                               ng-model="item.value"/>
+                    </p>
+                </div>
+
+                <div ng-show="attachments">
+                    <p ng-repeat="item in attachments">
+                        Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{($index+1)}}"
+                                 target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
+                    </p>
+                </div>
+                <p ng-if="selectedTask">
+                    <button ng-hide="selectedTask.assignee != null"
+                            ng-click="assignTask()"
+                            class="btn btn-success">Взяти в роботу
+                    </button>
+                    <button ng-hide="selectedTask.assignee == null"
+                            ng-click="submitTask()"
+                            class="btn btn-success">Опрацювати
+                    </button>
+                </p>
+            </div>
         </div>
-      </div>
-      <div class="col-xs-7 col-xs-offset-5 main">
-        <h3 ng-show="selectedTask && taskForm == null && !error">Завантаження ...</h3>
-
-        <show-error data="error" ng-show="error"></show-error>
-
-        <div ng-repeat="item in taskForm">
-          <p ng-if="['string', 'long', 'date'].indexOf(item.type) > -1">
-              
-            <label>{{sFieldLabel(item.name)}}</label><!-- {{item.type}}-->
-            <input class="form-control" ng-disabled="isFormPropertyDisabled(item)"
-                   ng-required="item.required" ng-model="item.value"/>
-          </p>
-
-          <p ng-if="item.type == 'textArea'">
-            <label>{{sFieldLabel(item.name)}}</label>
-        <textarea class="form-control" ng-disabled="isFormPropertyDisabled(item)"
-                  ng-required="item.required" ng-model="item.value"></textarea>
-          </p>
-
-          <p ng-if="item.type == 'user'">
-            <label>{{sFieldLabel(item.name)}}</label>
-            <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value"/>
-          </p>
-
-          <p ng-if="item.type == 'enum'">
-            <label>{{sFieldLabel(item.name)}}</label>
-            <select class="form-control" ng-disabled="isFormPropertyDisabled(item)"
-                    ng-options="oEnumValue.id as oEnumValue.name for oEnumValue in item.enumValues"
-                    ng-required="item.required" ng-model="item.value"></select>
-          </p>
-          <p ng-if="item.type == 'file' && !isFormPropertyDisabled(item)">
-            <label>{{sFieldLabel(item.name)}}</label>
-            <file-field name="{{item.id}}" ng-disabled="isFormPropertyDisabled(item)" ng-model="item.value" ng-required="property.required">Add File</file-field>
-          </p>
-          <p ng-if="['string', 'long', 'date', 'enum', 'user', 'textArea', 'file'].indexOf(item.type) == -1">
-            <label>{{sFieldLabel(item.name)}}</label> <!-- {{item.type}} -->
-            <input class="form-control" ng-disabled="true" ng-required="item.required" ng-model="item.value" />
-          </p>
-        </div>
-        <div ng-show="attachments">
-          <p ng-repeat="item in attachments">
-            Файл: <a href="/api/tasks/{{taskId}}/attachments/{{item.id}}/content/{{($index+1)}}" target="_blank"><b>{{item.name}}</b> {{item.description}}</a>
-          </p>
-        </div>
-        <p ng-if="selectedTask"> <!--taskForm != null    -->
-          <button ng-hide="selectedTask.assignee != null" ng-click="assignTask()" class="btn btn-success">Взяти в роботу</button>
-          <!-- <button ng-hide="taskForm == null" ng-disabled="selectedTask.assignee != null && hasAttachment()" ng-click="downloadAttachment()" class="btn btn-success">Загрузити документ</button> -->
-          <button ng-hide="selectedTask.assignee == null" ng-click="submitTask()" class="btn btn-success">Опрацювати</button>
-        </p>
-      </div>
     </div>
-  </div>
 </div>
