--- a/central-js/client/src/html/service/city/absent.html
+++ b/central-js/client/src/html/service/city/absent.html
@@ -18,7 +18,7 @@
                                             <center>
                                                 <div class="pluso"
                                                          data-background="transparent"
-                                                         data-options="big,round,line,horizontal,nocounter,theme=04"
+                                                         data-options="big,round,line,horizontal,counter,theme=04"
                                                          data-title="Закликаю владу перевести цю послугу в електронну форму! {{data.city.sName}} – {{service.sName}}"
                                                          data-description="{{data.city.sName}} – {{service.sName}}"
                                                          data-services="facebook,vkontakte,twitter">
