--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -42,6 +42,22 @@
 <div class="row">
     <div class="col-md-12"
          id="accordion">
+		 
+		<div class="row">
+			<div class="row">
+				<button type="button" class="btn btn-success" file-upload-a>
+					<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+					<span>Добавить документ</span>
+					<input type="file" style="display:none">
+				</button>
+				<button type="button" class="btn btn-success" ng-click="file.uploadDocument()" ng-if="file.fileName">
+					<span>Завантажити</span>
+				</button>
+			</div>
+			<div class="row">
+				<label ng-if="file.fileName">Файл: {{file.fileName}}</label>
+			</div>
+		</div>
 
         <table class="table table-striped">
             <thead>
