--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -45,6 +45,7 @@
 		 
 		<div class="row">
 			<div class="row">
+                            <center>
 				<button type="button" class="btn btn-success" file-upload-a>
 					<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
 					<span>Добавить документ</span>
@@ -53,9 +54,12 @@
 				<button type="button" class="btn btn-success" ng-click="file.uploadDocument()" ng-if="file.fileName">
 					<span>Завантажити</span>
 				</button>
+                            </center>
 			</div>
 			<div class="row">
+                            <center>
 				<label ng-if="file.fileName">Файл: {{file.fileName}}</label>
+                            </center>
 			</div>
 		</div>
 
