--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -147,7 +147,7 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="form-group" ng-class="{'has-success': shareLinkForm.email.$valid}">
+                                    <div class="form-group" ng-class="{'has-success': shareLinkForm.email.$valid && shareLinkForm.email.$touched}">
 
                                         <label for="email">Введіть електронну пошту (за бажанням)
                                             <span class="snippet">(на вказаний адрес буде надіслано посилання на документ)</span>
