"Надати доступ" замість "Надіслати посилання" на кнопке отправки формы

--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -186,7 +186,7 @@
 
                                 <div class="submit-button">
                                     <button type="submit"
-                                            class="btn btn-primary" ng-disabled="shareLinkForm.$invalid">Надіслати посилання
+                                            class="btn btn-primary" ng-disabled="shareLinkForm.$invalid">Надати доступ
                                     </button>
                                 </div>
                             </form>
