--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -43,7 +43,7 @@
     <div class="col-md-12"
          id="accordion">
 		 
-		<div class="row">
+                    <div class="row" style="display: none;">
 			<div class="row">
                             <center>
 				<button type="button" class="btn btn-success" file-upload-a>
