--- a/central-js/client/src/html/documents/bankid/index.html
+++ b/central-js/client/src/html/documents/bankid/index.html
@@ -1,14 +1,15 @@
 <div class="row">
-    <div class="col-md-12">
-        <form class="form-signin-bankid_">
-            <h4 class="form-signin-bankid-heading_">Щоб почати користуватись сервісом “Мои документы”, 
-                <a href="#" ng-click="loginWithBankId()">увійдіть через BankID</a>
-                або через 
-                <a href="#" onclick="alert('Працюватиме незабаром');">електронно-ціфровий підпис</a>
-            </h4>
-            <div style="display: none;">
-                <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="loginWithBankId()">BankID</button>
-            </div>
-        </form>
+    <div class="list-group-item">
+        <span>Крок 1. Увійдіть в систему через</span>
+        <button style="display: none;" class="btn btn-info"><i class="icon-door-lock"></i><span class="btn-text">igov.org.ua</span></button>
+        <a class="btn btn-info" href="#" ng-click="loginWithBankId()">
+            <i class="icon-bank-id"></i>
+            <span class="btn-text">BankID</span>
+        </a>
+        <button style="display: none;" class="btn"><i class="icon-mobil-id"></i></button>
+        <button onclick="alert('Працюватиме незабаром');" class="btn btn-success i-btn-badge">
+            <i class="icon-badge"></i>
+            <span class="btn-text"><div>Сертифікат електронно-</div><div>цифрового підпису</div></span>
+        </button>
     </div>
 </div>
