Про портал https://igov.org.ua/about +Мерило Яника - дописать город: , Киев
Хидер и Футер
+Под “Зроблено ІТ-волонтерами” поставить второй строчкой текст: alpha-версія (так, интервалы строчек были такие же, как в ссылках слева)
+Убираем красный текст в шапке

--- a/central-js/client/src/html/about/index.html
+++ b/central-js/client/src/html/about/index.html
@@ -5,19 +5,17 @@
 
             <div style="margin-left:15px;">
                 <p dir="ltr"
-                   style="line-height:1.7999999999999998;margin-top:0pt;margin-bottom:0pt;">
+                   style="line-height:1.7999999999999998;margin-top:0pt;margin-bottom:5pt;">
                     <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">На цьому порталі зібрано послуги, які державні органи України надають громадянам та бізнесу. Частина послуг надається через Інтернет (такі послуги позначені іконкою </span><i class="icon-e-service-on"></i><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">), інша частина послуг все ще очікує на своє впровадження в електронній формі.</span></span>
                 </p>
-                <br/>
-
+                
                 <p dir="ltr"
-                   style="line-height:1.7999999999999998;margin-top:0pt;margin-bottom:0pt;">
+                   style="line-height:1.7999999999999998;margin-top:0pt;margin-bottom:5pt;">
                     <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Цей портал зроблено волонтерською командою </span><span style="color: rgb(0, 0, 0); font-style: italic; vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">iGov</span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;"> в рамках боротьби з корупцією в Україні та вдосконалення бізнес-процесів в наших державних органах.</span></span>
                 </p>
-                <br/>
 
                 <p dir="ltr"
-                   style="line-height:1.7999999999999998;margin-top:0pt;margin-bottom:0pt;">
+                   style="line-height:1.7999999999999998;margin-top:0pt;margin-bottom:5pt;">
                     <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Велика подяка ІТ-волонтерам, які взяли та беруть участь у розробці Порталу:</span></span>
                 </p>
 
@@ -261,7 +259,7 @@
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
                                     <p dir="ltr"
                                        style="line-height:1.2;margin-top:0pt;margin-bottom:0pt;">
-                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Мерило Яника</span></span>
+                                        <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Мерило Яника, Киев</span></span>
                                     </p>
                                 </td>
                                 <td style="border-style: solid; border-width: 1px; border-color: rgb(169, 169, 169); vertical-align: bottom; padding: 3px;">
@@ -388,10 +386,9 @@
                     </center>
 
                 </div>
-                <br/>
 
                 <p dir="ltr"
-                   style="line-height:1.7999999999999998;margin-top:0pt;margin-bottom:0pt;">
+                   style="line-height:1.7999999999999998;margin-top:5pt;margin-bottom:0pt;">
                     <span><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">Якщо ви маєте досвід у розробці ІТ-продуктів та бажаєте приєднатися до команди ІТ-волонтерів, запрошуємо Вас заповнити цю </span><a href="https://docs.google.com/a/privatbank.ua/forms/d/1gwhSfGp3SyBXctFQ_VZQy4o9bbPY9Kw8ujbW4FuqhcU/viewform"
                                                                                                                                                                                                                                                                                                                       style="text-decoration:none;"><span style="color: rgb(17, 85, 204); text-decoration: underline; vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">форму</span></a><span style="color: rgb(0, 0, 0); vertical-align: baseline; white-space: pre-wrap; background-color: transparent;">.</span></span>
                 </p>
