Документы - Мои документы +сделать отступ над текстом “Тут знаходяться….” (для текстов на второй и третьей вкладке тоже не забыть про интервалы)
Ссылки
Документы
-Докладніше про розділ Документи на порталі iGov (вторая и третья вкладки в "Документы") https://docs.google.com/presentation/d/17SPm-nD1awYllMNiuv3gQnckOC0VegHj7-SbLtjTOZs/edit#slide=id.p

--- a/central-js/client/src/html/documents/content.html
+++ b/central-js/client/src/html/documents/content.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top:20px;">
     <div class="col-md-12">
         <p align="justify">Тут знаходяться всі Ваші документи, які були раніше завантажені авторизованими організаціями.
                            Ви можете їх скачати або надати доступ третім особам (в тому числі іншим державним або
