--- a/central-js/client/src/html/documents/search/index.html
+++ b/central-js/client/src/html/documents/search/index.html
@@ -3,6 +3,8 @@
 	<div class="list-group-item">
 		<div class="row no-margin-bottom">
 			<div class="col-md-10">
+                            <a href="https://docs.google.com/presentation/d/17SPm-nD1awYllMNiuv3gQnckOC0VegHj7-SbLtjTOZs/edit#slide=id.p">Докладніше про розділ Документи на порталі iGov</a>
+                            <br>
                             Розділ у процесі розробці
 			</div>
 		</div>
