--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -8,7 +8,7 @@
            </div>
             <div class="index-services-count">
                 <span class="index-services-count-item">
-                    <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуга доступна онлайн
+                    <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуг доступно онлайн
                 </span>
                 <span class="index-services-count-item">
                     <span class="icon-e-service-test"></span>{{catalogCounts[1]}} &mdash; дуже скоро
