--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-7 col-md-offset-3">
+        <div style="/*width: 600px;margin-left: 0;alignment-adjust: central;*/" class="col-md-7 col-md-offset-3">
            <div class="big-inner-addon">
               <span class="glyphicon glyphicon-search al-left" aria-hidden="true"></span>
               <input ng-model="sSearch" ng-model-options="{ updateOn: 'default', debounce: {'default': 500} }" ng-change="search()"type="text" class="form-control input-lg" placeholder="Пошук послуги">
