--- a/central-js/client/src/html/catalog/services.html
+++ b/central-js/client/src/html/catalog/services.html
@@ -8,13 +8,19 @@
            </div>
             <div class="index-services-count">
                 <span class="index-services-count-item">
+                    <nobr>
                     <span class="icon-e-service-on"></span>{{catalogCounts[2]}} &mdash; послуг доступно онлайн
+                    </nobr>
                 </span>
                 <span class="index-services-count-item">
+                    <nobr>
                     <span class="icon-e-service-test"></span>{{catalogCounts[1]}} &mdash; дуже скоро
+                    </nobr>
                 </span>
                 <span class="index-services-count-item">
+                    <nobr>
                     <span class="icon-e-service-off"></span>{{catalogCounts[0]}} &mdash; в роботі
+                    </nobr>
                 </span>
             </div>
         </div>
