--- a/central-js/client/src/html/service/country/absent.html
+++ b/central-js/client/src/html/service/country/absent.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<strong>На жаль, поки що неможливе надання цієї послуги в електронному вигляді.</strong>
-                                <a class="ctrls-admin ctrls-srvc-add" href="" ng-hide="true"><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
+                                <a class="ctrls-admin ctrls-srvc-add" href="" ng-if="bAdmin"><span class="glyphicon glyphicon-plus"></span> Додати послугу</a>
 			</div>
 		</div>
 		<div class="row">
